# cgm

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  cgm.h  mat2.h  mat2.inl  mat3.h  mat3.inl  mat4.h  mat4.inl  project.c  project.h  project.inl  transform.c  transform.h  transform.inl  vec2.c  vec2.h  vec2.inl  vec3.c  vec3.h  vec3.inl  vec4.c  vec4.h
src/matrix/: CMakeLists.txt  dmat2.c  dmat2.h  dmat3.c  dmat3.h  dmat4.c  dmat4.h  mat2.c  mat2.h  mat3.c  mat3.h  mat4.c  mat4.h
src/quaternion/: CMakeLists.txt  dquaternion.c  dquaternion.h  quaternion.c  quaternion.h
src/vector/: CMakeLists.txt  bvec2.c  bvec2.h  bvec3.c  bvec3.h  bvec4.c  bvec4.h  dvec2.c  dvec2.h  dvec3.c  dvec3.h  dvec4.c  dvec4.h  ivec2.c  ivec2.h  ivec3.c  ivec3.h  ivec4.c  ivec4.h  uvec2.c  uvec2.h  uvec3.c  uvec3.h  uvec4.c  uvec4.h  vec2.c  vec2.h  vec3.c  vec3.h  vec4.c  vec4.h
